<?xml version="1.0" encoding="utf-8"?>
<!-- Questions adapted from Alzheimer's Associate website article
titled "10 Early Signs and Symptoms of Alzheimer's"
url: https://www.alz.org/10-signs-symptoms-alzheimers-dementia.asp Permission from Alzheimer's
Association to use material was obtained by email on 2/15/2018-->
<resources>
    <string name="app_name">Alzheimer\'s Awareness Quiz</string>

    <!-- Welcome Screen -->
    <string name="welcome">Welcome to the \nAlzheimer\'s Awareness Quiz!</string>
    <string name="instructions">You will be asked 10 questions about the signs and symptoms of alzheimer\'s disease.
        \nAnswer each question to the best of your knowledge. \nYour responses will be scored at the end.
    </string>
    <string name="description">
        DISCLAIMER
        \nThis app was created to raise awareness and direct those that suspect they or their loved one may be
        suffering from the early stages of alzheimer\'s disease to more information from the Alzheimer\'s Association.
        This quiz does not diagnose or treat any illness and is not endorsed by any medical professional or the Alzheimer\'s Association.
        Materials from alz.org® are used with permission by the Alzheimer\'s Association.
    </string>
    <string name="editName">Please Enter Your Name (Optional)</string>
    <string name="userGreeting">Hello, </string>
    <string name="continueButton">Submit Name</string>

    <!-- Strings Reused -->
    <string name="logoDescription">Logo of Alzheimer\'s Association</string>
    <string name="noneResponse">None of these.</string>
    <string name="submit">Submit Answer</string>
    <string name="mustAnswer">You must choose at least one option.</string>

    <!-- Question 1 -->
    <string name="q1">Question 1</string>
    <string name="q1text">Do you or your love one experience any of these examples of memory loss that disrupt daily life?\nCheck all that apply:</string>
    <string name="q1example1">Forgets recently learned information.</string>
    <string name="q1example2">Forgets important dates or events.</string>
    <string name="q1example3">Asks for the same information over and over.</string>
    <string name="q1example4">Increased need to rely on memory aids or family members for things once handled by self.</string>
    <string name="q1AgeRelated">Sometimes forgetting names or appointments, but remembering them later can be a typical age-related change.</string>

    <!-- Question 2 -->
    <string name="q2">Question 2</string>
    <string name="q2text">Do you or your loved one experience challenges in planning or solving problems?\nCheck all that apply:</string>
    <string name="q2example1">Changes in your/their ability to develop and follow a plan.</string>
    <string name="q2example2">Changes in your/their ability to work with numbers.</string>
    <string name="q2example3">Has trouble following a familiar recipe or keeping track of monthly bills.</string>
    <string name="q2example4">Has difficulty concentrating and takes much longer to do things than you/they did before.</string>
    <string name="q2AgeRelated">Making occasional errors when balancing a checkbook can be a typical age-related change.</string>

    <!--Question 3 -->
    <string name="q3">Question 3</string>
    <string name="q3text">Do you or your loved one have difficulty completing familiar tasks at home, at work, or at leisure?\nCheck all that apply:</string>
    <string name="q3example1">Finds it hard to complete daily tasks.</string>
    <string name="q3example2">Has trouble driving to a familiar location.</string>
    <string name="q3example3">Has trouble managing a budget at work.</string>
    <string name="q3example4">Has trouble remembering the rules of a favorite game.</string>
    <string name="q3AgeRelated">Occasionally needing help to use the settings on a microwave or to record a television show can be a typical age-related change.</string>

    <!-- Question 4 -->
    <string name="q4">Question 4</string>
    <string name="q4text">Do you or your loved one experience confusion with time or place?\nCheck all that apply:</string>
    <string name="q4example1">Loses track of dates and seasons.</string>
    <string name="q4example2">Loses track of the passage of time.</string>
    <string name="q4example3">Has trouble understanding something if it is not happening immediately.</string>
    <string name="q4example4">Sometimes forget where you/they are or how you/they got there.</string>
    <string name="q4AgeRelated">Getting confused about the day of the week but figuring it out later can be a typical age-related change.</string>

    <!--Question 5 -->
    <string name="q5">Question 5</string>
    <string name="q5text">Do you or your loved on experience trouble understanding visual images and spacial relationships?\nCheck all that apply:</string>
    <string name="q5example1">Has vision problems.</string>
    <string name="q5example2">Has difficulty reading.</string>
    <string name="q5example3">Has difficulty determining color or contrast.</string>
    <string name="q5example4">Has difficulty judging distance/problems with driving.</string>
    <string name="q5AgeRelated">Vision changes related to cataracts can be a typical age-related change.</string>

    <!-- Question 6 -->
    <string name="q6">Question 6</string>
    <string name="q6text">Do you or your loved one have new problems with words in speaking or writing? Check all that apply:</string>
    <string name="q6example1">Has trouble following or joining a conversation.</string>
    <string name="q6example2">Stops in the middle of a conversation and has no idea how to continue or you/they repeat themselves</string>
    <string name="q6example3">Struggles with vocabulary/has problems finding the right word.</string>
    <string name="q6example4">Calls things by the wrong name.</string>
    <string name="q6AgeRelated">Sometimes having trouble finding the right word can be a typical age-related change.</string>

    <!-- Question 7 -->
    <string name="q7">Question 7</string>
    <string name="q7text">Do you or your loved one misplace things and lose the ability to retrace steps?\nCheck all that apply:</string>
    <string name="q7example1">Puts things in unusual places.</string>
    <string name="q7example2">Loses things with increasing frequency.</string>
    <string name="q7example3">Unable to go back over your/their steps to find lost items.</string>
    <string name="q7example4">Accuses others of stealing.</string>
    <string name="q7AgeRelated">Misplacing things from time to time and retracing steps to find them can be a typical age-related change.</string>

    <!-- Question 8 -->
    <string name="q8">Question 8</string>
    <string name="q8text">Do you or your loved one have decreased or poor judgement?\nCheck all that apply:</string>
    <string name="q8example1">Changes in judgment or decision-making.</string>
    <string name="q8example2">Uses poor judgment when dealing with money.</string>
    <string name="q8example3">Pays less attention to grooming.</string>
    <string name="q8example4">Pays less attention to keeping yourself/themself clean</string>
    <string name="q8AgeRelated">Making a bad decision once in a while can be a typical age-related change.</string>

    <!-- Question 9 -->
    <string name="q9">Question 9</string>
    <string name="q9text">Are you or your loved one withdrawing from work or social activities?\nCheck all that apply:</string>
    <string name="q9example1">Starting to remove yourself/themself from hobbies, social activities, work projects or sports.</string>
    <string name="q9example2">Has trouble keeping up with a favorite sports team.</string>
    <string name="q9example3">Has trouble remembering how to complete a favorite hobby.</string>
    <string name="q9example4">Avoids being social.</string>
    <string name="q9AgeRelated">Sometimes feeling weary of work, family and social obligations can be a typical age-related change.</string>

    <!-- Question 10 -->
    <string name="q10">Question 10</string>
    <string name="q10text">Have you or your loved one experienced any changes in mood and personality?\nCheck all that apply:</string>
    <string name="q10example1">Becomes confused or suspicious.</string>
    <string name="q10example2">Becomes depressed, fearful or anxious.</string>
    <string name="q10example3">Is easily upset at home, at work, and with friends.</string>
    <string name="q10example4">Is easily upset in places where they are out of their comfort zone.</string>
    <string name="q10AgeRelated">Developing very specific ways of doing things and becoming irritable when a routine is disrupted can be a typical age-related change.</string>

    <!-- Quiz Result Screen -->
    <string name="thankYou">Thank you for taking the\nAlzheimer\'s Awareness Quiz</string>
    <string name="scoreMessage">Your score is:</string>
    <string name="scoreMessage2">out of 40</string>
    <string name="scoreExplanation">A high score could mean that you or your loved one is experiencing the early warning signs of Alzheimer\'s disease.</string>
    <string name="emailQuestion">Would you like to email your results?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noEmail">No email will be generated.</string>
    <string name="summary_email_subject">Alzheimer\'s Awareness Quiz Results for:</string>
    <string name="emailScore">just completed the Alzheimer\'s Awareness Quiz.\n\nThe score was</string>
    <string name="visitWebsite">Go to alz.org®</string>
    <string name="alzWebsite">\n\nPlease visit: https://www.alz.org/10-signs-symptoms-alzheimers-dementia.asp® for more information about Alzheimer\'s disease</string>
    <string name="disclaimerForLink">\n\nThe Alzheimer\'s Association is not responsible for information or advice provided by others, including information on websites that link to Association sites and on third party sites to which the Association links.\n\n</string>
    <string name="reset">Reset Quiz</string>
</resources>
