<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.alzheimersawarenessquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical">

        <View style="@style/ViewStyle.Purple" />

        <View style="@style/ViewStyle.Gold" />

        <TextView
            style="@style/TextStyle.DarkHead"
            android:text="@string/thankYou" />

        <TextView
            android:id="@+id/score_view"
            style="@style/TextStyle.DarkHead"
            android:text="@string/scoreMessage" />

        <TextView
            style="@style/TextStyle.DarkBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scoreExplanation" />

        <TextView
            style="@style/TextStyle.DarkHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailQuestion" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/yes"
                style="@style/CheckboxStyle.Dark"
                android:paddingLeft="@dimen/margin"
                android:paddingStart="@dimen/margin"
                android:paddingRight="@dimen/margin"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/no"
                style="@style/CheckboxStyle.Dark"
                android:paddingLeft="@dimen/margin"
                android:paddingStart="@dimen/margin"
                android:paddingRight="@dimen/margin"
                android:text="@string/no" />
        </RadioGroup>

        <Button
            style="@style/ButtonStyle.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitRadio"
            android:text="@string/submit" />

        <TextView
            style="@style/TextStyle.DarkBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimerForLink" />

        <Button
            android:id="@+id/web_link"
            style="@style/ButtonStyle.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="visitAlz"
            android:text="@string/visitWebsite" />

        <Button
            style="@style/ButtonStyle.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="resetQuiz"
            android:text="@string/reset" />

        <ImageView
            style="@style/ImageStyle"
            android:contentDescription="@string/logoDescription"/>

        <View style="@style/ViewStyle.Gold" />

        <View style="@style/ViewStyle.Purple" />
    </LinearLayout>
</ScrollView>