<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.alzheimersawarenessquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <View style="@style/ViewStyle" />

        <TextView
            android:id="@+id/user_name"
            style="@style/TextStyle.LightHead"
            android:text="@string/userName" />

        <TextView
            android:id="@+id/question_number"
            style="@style/TextStyle.LightHead"
            android:text="@string/q1" />

        <TextView
            android:id="@+id/question_text"
            style="@style/TextStyle.LightBody"
            android:text="@string/q1text" />

        <CheckBox
            android:id="@+id/answer_example1"
            style="@style/CheckboxStyle.Light"
            android:paddingLeft="@dimen/margin"
            android:paddingStart="@dimen/margin"
            android:paddingRight="@dimen/margin"
            android:text="@string/q1example1" />

        <CheckBox
            android:id="@+id/answer_example2"
            style="@style/CheckboxStyle.Light"
            android:paddingLeft="@dimen/margin"
            android:paddingStart="@dimen/margin"
            android:paddingRight="@dimen/margin"
            android:text="@string/q1example2" />

        <CheckBox
            android:id="@+id/answer_example3"
            style="@style/CheckboxStyle.Light"
            android:paddingLeft="@dimen/margin"
            android:paddingStart="@dimen/margin"
            android:paddingRight="@dimen/margin"
            android:text="@string/q1example3" />

        <CheckBox
            android:id="@+id/answer_example4"
            style="@style/CheckboxStyle.Light"
            android:paddingLeft="@dimen/margin"
            android:paddingStart="@dimen/margin"
            android:paddingRight="@dimen/margin"
            android:text="@string/q1example4" />

        <CheckBox
            android:id="@+id/answer_none"
            style="@style/CheckboxStyle.Light"
            android:paddingLeft="@dimen/margin"
            android:paddingStart="@dimen/margin"
            android:paddingRight="@dimen/margin"
            android:text="@string/noneResponse" />

        <Button
            style="@style/ButtonStyle.Dark"
            android:onClick="submitAnswer"
            android:text="@string/submit" />

        <ImageView
            style="@style/ImageStyle"
            android:contentDescription="@string/logoDescription"/>

        <View style="@style/ViewStyle" />

    </LinearLayout>
</ScrollView>