<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.alzheimersawarenessquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:gravity="center"
            android:padding="@dimen/pad"
            android:text="@string/welcome"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/headText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:gravity="center"
            android:padding="@dimen/pad"
            android:text="@string/instructions"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/bodyText" />

        <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/editName"
            android:padding="@dimen/pad"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/question_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/colorPrimary"
            android:onClick="nameText"
            android:padding="@dimen/pad"
            android:text="@string/continueButton"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:padding="@dimen/pad"
            android:text="@string/description"
            android:textColor="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:contentDescription="@string/logoDescription"
            android:src="@drawable/alzheimers_association_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:padding="@dimen/pad"
                android:gravity="center"
                android:text="@string/userName"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/headText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:padding="@dimen/pad"
                android:gravity="center"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/headText"
                android:text="@string/q1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:padding="@dimen/pad"
                android:gravity="center"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/bodyText"
                android:text="@string/q1text"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin"
                android:layout_margin="@dimen/pad"
                android:text="@string/q1example1"
                android:textSize="@dimen/bodyText"
                android:textColor="@color/colorPrimaryLight"
                android:buttonTint="@color/colorPrimary"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin"
                android:layout_margin="@dimen/pad"
                android:text="@string/q1example2"
                android:textSize="@dimen/bodyText"
                android:textColor="@color/colorPrimaryLight"
                android:buttonTint="@color/colorPrimary"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin"
                android:layout_margin="@dimen/pad"
                android:text="@string/q1example3"
                android:textSize="@dimen/bodyText"
                android:textColor="@color/colorPrimaryLight"
                android:buttonTint="@color/colorPrimary"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin"
                android:layout_margin="@dimen/pad"
                android:text="@string/q1example4"
                android:textSize="@dimen/bodyText"
                android:textColor="@color/colorPrimaryLight"
                android:buttonTint="@color/colorPrimary"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin"
                android:layout_margin="@dimen/pad"
                android:text="@string/noneResponse"
                android:textSize="@dimen/bodyText"
                android:textColor="@color/colorPrimaryLight"
                android:buttonTint="@color/colorPrimary"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin"
                android:background="@color/colorPrimary"
                android:onClick="nameText"
                android:padding="@dimen/pad"
                android:text="@string/submit"
                android:textColor="@color/colorPrimaryDark" />

            <ImageView
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:contentDescription="@string/logoDescription"
                android:src="@drawable/reverse_alzheimers_association" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>